project(PostgreSQLInterface)

IF(NOT WIN32 AND UNIX)
	FILE(GLOB ALL_HEADER_SRCS *.h)
	FILE(GLOB ALL_CPP_SRCS *.cpp)
	FINDPOSTGRE()
	include_directories(${RAKNET_ACTUAL_INCLUDE_DIR_PATH} ${POSTGRESQL_INCLUDE_DIR})
	add_library(LibPostgreSQLInterface STATIC ${ALL_CPP_SRCS} ${ALL_HEADER_SRCS})
	target_link_libraries(LibPostgreSQLInterface ${RAKNET_COMMON_LIBS} ${POSTGRESQL_LIBRARIES})
	VSUBFOLDER(LibPostgreSQLInterface "libs")
ENDIF(NOT WIN32 AND UNIX)
